@@ -1656,7 +1656,7 @@ X(idle)
 		SYNCH_PC;
 		usleep(50);
 		cpu->has_been_idling = 1;
-		cpu->n_translated_instrs += N_SAFE_DYNTRANS_LIMIT / 4;
+		cpu->n_translated_instrs += N_SAFE_DYNTRANS_LIMIT / 2;
 		cpu->cd.m88k.next_ic = &nothing_call;
 	} else {
 		cpu->n_translated_instrs ++;
@@ -1698,7 +1698,7 @@ X(idle_with_tb1)
 		SYNCH_PC;
 		usleep(50);
 		cpu->has_been_idling = 1;
-		cpu->n_translated_instrs += N_SAFE_DYNTRANS_LIMIT / 4;
+		cpu->n_translated_instrs += N_SAFE_DYNTRANS_LIMIT / 2;
 		cpu->cd.m88k.next_ic = &nothing_call;
 	} else {
 		cpu->n_translated_instrs += 2;
